--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ description = "External tools for ORCA"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-
+"waitress>=3.0.2",
+"flask>=3.1.2"
 ]
 
 [tool.setuptools.packages.find]
